--- a/views/index.html
+++ b/views/index.html
@@ -1,47 +1,68 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Chat room</title>
-  <style>
+  <head>
+    <title>Socket.IO chat</title>
+    <style>
+     * { margin: 0; padding: 0; box-sizing: border-box; }
+      body { font: 13px ; }
+      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form input { border: 0; padding: 10px; width: 100% }
+      #messages li { padding: 1px 20px; }
 
-  </style>
 
-</head>
-<body>
-  <h3>Messages:</h3>
-  <ul id="list-msgs">
-  
-  </ul>
-  <textarea id="new-msg" cols="30" rows="5" placeholder="New message"></textarea>
-  
-  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
+    </style>
+  </head>
 
-  <script>
-    var socket = io(); // Inicializamos socketIO en el cliente
-    
-    /**
+
+  <body>
+  <h1>List Messages</h1>
+
+    <h4><ul id="messages"></ul></h4>
+
+
+    <form action="">
+      <input id="m"/>
+    </form>
+
+   <script src="/socket.io/socket.io.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+
+
+<script>
+
+  var socket = io(); // Inicializamos socketIO en el cliente
+ 
+ 
+
+ /**
      * Listener para el evento 'chat message'
      *   Notese que es el mismo evento que se envia 
      *   desde el servidor.
      * Agregamos el mensage entrante a la lista.
      */
-    socket.on('chat message', function (msg) {
-      $('#list-msgs').append( $('<li>').text(msg) );
-    });
-    
-    /**
+  socket.on('chat message', function(msg){
+    $('#messages').append($('<li>').text(msg));
+  });
+
+   $('form').submit(function(){
+    socket.emit('chat message', $('#m').val());
+    $('#m').val('');
+    return false;
+  });
+/**
      * Emitimos un evento de tipo 'chat message' cada vez
      * que se presiona 'Enter' en el textarea y enviamos
      * su contenido como mensaje.
      */
-    $('#new-msg').keyup(function (evt) {
+
+  $('#m').keyup(function (evt) {
       if (evt.keyCode === 13) {
-        socket.emit('chat message', $('#new-msg').val());
-        $('#new-msg').val('');
+        socket.emit('chat message', $('#m').val());
+        $('m').val('');
       }
     });
-  </script>
-</body>
+</script>
+
+
+  </body>
 </html>
