--- a/views/maps.html
+++ b/views/maps.html
@@ -9,13 +9,13 @@
   <script src="/socket.io/socket.io.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 <style>
-  body { margin:0; padding:0; }
-  #map { position:absolute; top:0; bottom:0; width:100%; }
+  body { margin:0; padding:0; width: 100%}
+  #map { position:fixed; top:0; bottom:0; width:50%; }
 
      body { font: 13px ; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form { background: #000; padding: 3px; position: absolute; bottom: 0; width: 100% }
       form input { border: 0; padding: 10px; width: 100% }
-      #messages li { padding: 1px 20px; }
+      #messages li { padding: 1px 10px; }
 
 </style>
 </head>
@@ -28,7 +28,7 @@
   color:#FFF;
   display:block;
   position:absolute;
-  top:50%;left:50%;
+  top:50%;left:25%;
   width:160px;
   margin:-20px 0 0 -80px;
   z-index:100;
@@ -104,6 +104,7 @@ map.on('locationerror', function() {
     $('#m').val('');
     return false;
   });
+   
   $('#m').keyup(function (evt) {
       if (evt.keyCode === 13) {
         socket.emit('chat message', $('#m').val());
