--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>BASIC CHAT</title>
     <style>
      * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px ; }
@@ -15,7 +15,7 @@
 
 
   <body>
-  <h1>List Messages</h1>
+  <h1>Messages</h1>
 
     <h4><ul id="messages"></ul></h4>
 
@@ -40,12 +40,12 @@
     return false;
   });
 
-  $('#m').keyup(function (evt) {
+ /* $('#m').keyup(function (evt) {
       if (evt.keyCode === 13) {
         socket.emit('chat message', $('#m').val());
         $('m').val('');
       }
-    });
+    });*/
 </script>
 
 
