--- a/views/maps.html
+++ b/views/maps.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Geolocation</title>
+<title>Geochat</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
 <link href='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
@@ -10,7 +10,7 @@
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 <style>
   body { margin:0; padding:0; width: 100%}
-  #map { position:fixed; top:0; bottom:0; width:50%; }
+  #map { position:fixed; top:0; bottom:0; width:100%; }
 
      body { font: 13px ; }
       form { background: #000; padding: 3px; position: absolute; bottom: 0; width: 100% }
@@ -21,14 +21,13 @@
 </head>
 <body>
 
-
 <style>
 .ui-button {
   background:#3887BE;
   color:#FFF;
   display:block;
   position:absolute;
-  top:50%;left:25%;
+  top:50%;left:50%;
   width:160px;
   margin:-20px 0 0 -80px;
   z-index:100;
@@ -50,68 +49,7 @@
   <form action=""> <input id="m"/> </form>
 </div>
 
-<script>
-L.mapbox.accessToken = 'pk.eyJ1Ijoia2FyaXRvdHAiLCJhIjoib0ppeVhnWSJ9.JOLM9BQLqtI_bjvNzjNPew';
-var geolocate = document.getElementById('geolocate');
-var map = L.mapbox.map('map', 'mapbox.streets');
-
-var myLayer = L.mapbox.featureLayer().addTo(map);
-if (!navigator.geolocation) {
-    geolocate.innerHTML = 'Geolocation is not available';
-} else {
-    geolocate.onclick = function (e) {
-        e.preventDefault();
-        e.stopPropagation();
-        map.locate();
-    };
-}
-
-map.on('locationfound', function(e) {
-    map.fitBounds(e.bounds);
-
-    myLayer.setGeoJSON({
-        type: 'Feature',
-        geometry: {
-            type: 'Point',
-            coordinates: [e.latlng.lng, e.latlng.lat]
-        },
-        properties: {
-            'title': 'Here I am!',
-            'marker-color': '#ff8888',
-            'marker-symbol': 'star'
-        }
-    });
-
-    geolocate.parentNode.removeChild(geolocate);
-
-});
-
-
-
-map.on('locationerror', function() {
-    geolocate.innerHTML = 'Position could not be found';
-});
-
-
-  var socket = io(); 
- 
- socket.on('chat message', function(msg){
-    $('.marker-title').append($('<li>').text(msg));
-  });
-
-   $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
-    return false;
-  });
-   
-  $('#m').keyup(function (evt) {
-      if (evt.keyCode === 13) {
-        socket.emit('chat message', $('#m').val());
-        $('m').val('');
-      }
-    });
-</script>
+<script src="app.js"> </script>
 
 
 </body>
